# scan-steward

./: .codespellrc  .editorconfig  .gitignore  .justfile  .pre-commit-config.yaml  .prettierrc  README.md  mkdocs.yml  pyproject.toml  scan-steward.code-workspace
docs/: architecture.md  roadmap.md
src-backend/: .editorconfig  .gitignore  .justfile  Pipfile  Taskfile.yml  alembic.ini  manage.py  pyproject.toml  schema.json
src-backend/app/: main.py
src-backend/app/api/: __init__.py
src-backend/app/core/config/: __init__.py  base.py  database.py  folders.py
src-backend/app/core/models/: base.py
src-backend/app/core/plugins/: database.py  user.py
src-backend/app/core/providers/: __init__.py
src-backend/app/domain/image/: models.py
src-backend/app/domain/location/: controller.py  models.py  providers.py  repository.py  schema.py
src-backend/app/domain/person/: models.py  providers.py  repository.py
src-backend/app/domain/subject/: controller.py  models.py  providers.py  repository.py  schema.py
src-backend/app/domain/user/: models.py  schema.py
src-backend/image_metadata/: crud.py  models.py  routers.py  schemas.py
src-backend/image_metadata/migrations/: 0001_initial.py
src-backend/images/: models.py  router.py
src-backend/images/management/commands/: index.py
src-backend/images/migrations/: 0001_initial.py
src-backend/migrations/: env.py  script.py.mako
src-backend/migrations/versions/: 2024-01-10_11.14.19_d5b9dfdf44bf_initial_revision.py
src-backend/scansteward/: api.py  apps.py  asgi.py  models.py  settings.py  urls.py  wsgi.py
src-backend/scansteward/albums/: api.py  schemas.py
src-backend/scansteward/api/: __init__.py
src-backend/scansteward/common/: constants.py  errors.py  handlers.py  parser.py  renderer.py  renderers.py  schemas.py
src-backend/scansteward/common/authentication/: __init__.py
src-backend/scansteward/common/iso3166/: models.py  pydantic.py
src-backend/scansteward/common/iso3166/country/: __init__.py  countries.py
src-backend/scansteward/common/iso3166/subdivision/: AD.py  AE.py  AF.py  AG.py  AL.py  AM.py  AO.py  AR.py  AT.py  AU.py  AZ.py  BA.py  BB.py  BD.py  BE.py  BF.py  BG.py  BH.py  BI.py  BJ.py  BN.py  BO.py  BQ.py  BR.py  BS.py  BT.py  BW.py  BY.py  BZ.py  CA.py  CD.py  CF.py  CG.py  CH.py  CI.py  CL.py  CM.py  CN.py  CO.py  CR.py  (+161 more)
src-backend/scansteward/config/: __init__.py  settings.py  types.py
src-backend/scansteward/crud/: location.py
src-backend/scansteward/imageops/: constants.py  errors.py  faces.py  index.py  keywords.py  metadata.py  models.py  orientation.py  rotation.py  sync.py  text.py  types.py  utils.py
src-backend/scansteward/images/: api.py  schemas.py
src-backend/scansteward/locations/: api.py  schemas.py  utils.py  validators.py
src-backend/scansteward/management/commands/: debug.py  index.py  mixins.py  sync.py
src-backend/scansteward/migrations/: 0001_initial.py
src-backend/scansteward/models/: __init__.py  abstract.py  album.py  auth.py  image.py  metadata.py  user.py
src-backend/scansteward/people/: api.py  crud.py  router.py  schemas.py
src-backend/scansteward/pets/: api.py  schemas.py
src-backend/scansteward/routes/albums/: api.py  schemas.py
src-backend/scansteward/routes/authentication/: api.py  schemas.py
src-backend/scansteward/routes/images/: api.py  common.py  conditionals.py  filters.py  schemas.py
src-backend/scansteward/routes/locations/: api.py  schemas.py  utils.py
src-backend/scansteward/routes/people/: api.py  schemas.py
src-backend/scansteward/routes/pets/: api.py  schemas.py
src-backend/scansteward/routes/rough_dates/: api.py  schema.py
src-backend/scansteward/routes/sources/: api.py  schema.py
src-backend/scansteward/routes/tags/: api.py  schemas.py
src-backend/scansteward/routes/users/: api.py  schemas.py
src-backend/scansteward/signals/: handlers.py
src-backend/scansteward/syncoperations/: __init__.py  sync.py
src-backend/scansteward/tags/: api.py  schemas.py
src-backend/scansteward/tasks/: images.py  models.py
src-backend/scansteward/tests/: __init__.py  conftest.py  mixins.py  test_api_people.py  types.py  utils.py
src-backend/scansteward/tests/api/: conftest.py  test_api_album.py  test_api_auth.py  test_api_images.py  test_api_locations.py  test_api_misc.py  test_api_people.py  test_api_pets.py  test_api_rough_date.py  test_api_tags.py  types.py  utils.py
src-backend/scansteward/tests/fixtures/: indexed_sample_database.json  sample1.jpg.json  sample2.jpg.json  sample3.jpg.json  sample4.jpg.json
src-backend/scansteward/tests/management/: test_command_index.py  test_command_sync.py
src-backend/scansteward/tests/metadata/: conftest.py  test_image_metadata.py  test_read_faces.py
src-backend/scansteward/tests/samples/images/: README.md
src-backend/scansteward/utils/: __init__.py
src-backend/tests/: conftest.py  test_locations.py  test_subjects.py
src-docker/: Dockerfile
src-docs/: .editorconfig  Pipfile  Taskfile.yml  mkdocs.yml
src-docs/docs/: architecture.md  changelog.md  roadmap.md
src-frontend/: .editorconfig  .gitignore  .prettierrc  README.md  Taskfile.yml  angular.json  biome.json  open-api-gen-config.json  openapi.json  package.json  playwright.config.ts  pnpm-lock.yaml
src-frontend/src/: index.html  main.ts
src-frontend/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts  app.routes.ts
src-frontend/src/app/generated-api/: api-configuration.ts  api.module.ts  base-service.ts  models.ts  request-builder.ts  services.ts  strict-http-response.ts
src-frontend/src/app/header/: header.component.html  header.component.ts
src-frontend/src/app/navigation/: navigation.component.css  navigation.component.html  navigation.component.spec.ts  navigation.component.ts
src-frontend/src/app/people/: people.component.html  people.component.ts  people.service.ts
tools/iso-database/: .gitignore  Pipfile  main.py  test.py
tools/iso-database/database/: models.py  pydantic.py
(+129 files in other folders)
